--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
@@ -1,36 +1,35 @@
-DEPLOYMENT=local-dev
-ORGANISATION=zonesoft
-NAMESPACE=reference-apps
-APPLICATION_NAME=calendar-service
 SERVER_PORT=8286
 
+ORGANISATION=zonesoft
+NAMESPACE=hello-world-apps-and-services
+APPLICATION_NAME=calendar-service
+DEPLOYMENT=local-dev
+
 OTEL_LOGS_ENABLED=true
-#LOKI_URL=http://localhost:3100/loki/api/v1/push
-#TEMPO_URL=${ENV_CALENDAR_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
+OTEL_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
-#spring.application.org=${ENV_CALENDAR_SERVICE_ORGANISATION:${ORGANISATION}}
-spring.application.name=${ENV_CALENDAR_SERVICE_NAME:${APPLICATION_NAME}}
-server.port=${ENV_CALENDAR_SERVER_PORT:${SERVER_PORT}}
+GREETING_SERVICE_PROTOCOL=http
+GREETING_SERVICE_DOMAIN=localhost
+GREETING_SERVICE_PORT=8284
+GREETING_SERVICE_PATH=/greeting
+GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
+GREETING_SERVICE_TYPE=internal
 
-#zonesoft.loki.enabled=${ENV_CALENDAR_SERVICE_LOKI_ENABLED:${LOKI_ENABLED}}
-#zonesoft.loki.url=${ENV_CALENDAR_SERVICE_LOKI_URL:${LOKI_URL}}
-#management.metrics.distribution.percentiles-histogram.http.server.requests=true
-#management.endpoints.web.exposure.include=info,health,metrics,prometheus
+server.port=${ENV_SERVER_PORT:${SERVER_PORT}}
 
-#management.zipkin.tracing.endpoint=${TEMPO_URL}
-#management.tracing.sampling.probability=1.0
+spring.application.org=${ENV_ORGANISATION:${ORGANISATION}}
+spring.application.namespace=${ENV_NAMESPACE:${NAMESPACE}}
+spring.application.name=${ENV_APPLICATION_NAME:${APPLICATION_NAME}}
+spring.application.deployment=${ENV_DEPLOYMENT:${DEPLOYMENT}}
 
-otel.propagators=tracecontext
-#otel.resource.attributes.deployment.environment=${ENV_CALENDAR_SERVICE_DEPLOYMENT:${DEPLOYMENT}}
-#otel.resource.attributes.service.org=${ENV_CALENDAR_SERVICE_ORGANISATION:${ORGANISATION}}
-#otel.resource.attributes.service.namespace=${ENV_CALENDAR_SERVICE_NAMESPACE:${NAMESPACE}}
-#otel.resource.attributes.service.name=${spring.application.name}
-#otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
-
-otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
-#otel.instrumentation.logback-appender.enabled=true
 otel.service.name=${spring.application.name}
+otel.resource.attributes.org=${spring.application.org}
+otel.resource.attributes.namespace=${spring.application.namespace}
+otel.resource.attributes.deployment=${spring.application.deployment}
+
+otel.propagators=tracecontext,baggage
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
 otel.logs.exporter=otlp
-otel.exporter.otlp.endpoint=http://host.docker.internal:4418
+otel.exporter.otlp.endpoint=${ENV_OTEL_EXPORTER_ENDPOINT:${OTEL_EXPORTER_ENDPOINT}}
+otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
