--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-DEPLOYMENT=local-dev
-ORGANISATION=zonesoft
-NAMESPACE=reference-apps
-APPLICATION_NAME=hello-world-ui
 SERVER_PORT=8283
+
+ORGANISATION=zonesoft
+NAMESPACE=hello-world-apps-and-services
+APPLICATION_NAME=hello-world-ui
+DEPLOYMENT=local-dev
+
+OTEL_LOGS_ENABLED=true
+OTEL_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
 GREETING_SERVICE_PROTOCOL=http
 GREETING_SERVICE_DOMAIN=localhost
@@ -11,33 +15,21 @@ GREETING_SERVICE_PATH=/greeting
 GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
-OTEL_LOGS_ENABLED=true
-#LOKI_URL=http://localhost:3100/loki/api/v1/push
-#TEMPO_URL=${ENV_UI_APPLICATION_TEMPO_URL:http://localhost:9411/api/v2/spans}
-#spring.application.namespace=${ENV_UI_APPLICATION_NAMESPACE:${NAMESPACE}}
-#spring.application.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
-spring.application.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
-server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
+server.port=${ENV_SERVER_PORT:${SERVER_PORT}}
 
-#zonesoft.loki.enabled=${ENV_UI_APPLICATION_LOKI_ENABLED:${LOKI_ENABLED}}
-#zonesoft.loki.url=${ENV_UI_APPLICATION_LOKI_URL:${LOKI_URL}}
-#management.metrics.distribution.percentiles-histogram.http.server.requests=true
-#management.endpoints.web.exposure.include=info,health,metrics,prometheus
+spring.application.org=${ENV_ORGANISATION:${ORGANISATION}}
+spring.application.namespace=${ENV_NAMESPACE:${NAMESPACE}}
+spring.application.name=${ENV_APPLICATION_NAME:${APPLICATION_NAME}}
+spring.application.deployment=${ENV_DEPLOYMENT:${DEPLOYMENT}}
 
-#management.zipkin.tracing.endpoint=${TEMPO_URL}
-#management.tracing.sampling.probability=1.0
-
-otel.propagators=tracecontext
-#otel.resource.attributes.deployment.environment=${ENV_UI_APPLICATION_DEPLOYMENT:${DEPLOYMENT}}
-#otel.resource.attributes.service.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
-#otel.resource.attributes.service.namespace=${ENV_UI_APPLICATION_NAMESPACE:${NAMESPACE}}
-#otel.resource.attributes.service.name=${spring.application.name}
-#otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
-
-otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
-#otel.instrumentation.logback-appender.enabled=true
 otel.service.name=${spring.application.name}
+otel.resource.attributes.org=${spring.application.org}
+otel.resource.attributes.namespace=${spring.application.namespace}
+otel.resource.attributes.deployment=${spring.application.deployment}
+
+otel.propagators=tracecontext,baggage
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
 otel.logs.exporter=otlp
-otel.exporter.otlp.endpoint=http://host.docker.internal:4418
+otel.exporter.otlp.endpoint=${ENV_OTEL_EXPORTER_ENDPOINT:${OTEL_EXPORTER_ENDPOINT}}
+otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
