--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/clock-service/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/clock-service/src/main/resources/application.properties
@@ -5,8 +5,8 @@ NAMESPACE=hello-world-apps-and-services
 APPLICATION_NAME=clock-service
 DEPLOYMENT=local-dev
 
-OTEL_LOGS_ENABLED=true
-OTEL_EXPORTER_ENDPOINT=http://host.docker.internal:4418
+CLOCK_OTEL_LOGS_ENABLED=true
+CLOCK_OTEL_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
 GREETING_SERVICE_PROTOCOL=http
 GREETING_SERVICE_DOMAIN=localhost
@@ -17,10 +17,10 @@ GREETING_SERVICE_TYPE=internal
 
 server.port=${ENV_SERVER_PORT:${SERVER_PORT}}
 
-spring.application.org=${ENV_ORGANISATION:${ORGANISATION}}
-spring.application.namespace=${ENV_NAMESPACE:${NAMESPACE}}
-spring.application.name=${ENV_APPLICATION_NAME:${APPLICATION_NAME}}
-spring.application.deployment=${ENV_DEPLOYMENT:${DEPLOYMENT}}
+spring.application.org=${ENV_CLOCK_ORGANISATION:${ORGANISATION}}
+spring.application.namespace=${ENV_CLOCK_NAMESPACE:${NAMESPACE}}
+spring.application.name=${ENV_CLOCK_APPLICATION_NAME:${APPLICATION_NAME}}
+spring.application.deployment=${ENV_CLOCK_DEPLOYMENT:${DEPLOYMENT}}
 
 otel.service.name=${spring.application.name}
 otel.resource.attributes.org=${spring.application.org}
@@ -31,5 +31,5 @@ otel.propagators=tracecontext,baggage
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
 otel.logs.exporter=otlp
-otel.exporter.otlp.endpoint=${ENV_OTEL_EXPORTER_ENDPOINT:${OTEL_EXPORTER_ENDPOINT}}
-otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
+otel.exporter.otlp.endpoint=${ENV_CLOCK_OTEL_EXPORTER_ENDPOINT:${CLOCK_OTEL_EXPORTER_ENDPOINT}}
+otel.instrumentation.logback-appender.enabled=${ENV_CLOCK_OTEL_LOGS_ENABLED:${CLOCK_OTEL_LOGS_ENABLED}}
