--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-utils/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-utils/src/main/resources/application.properties
@@ -3,16 +3,18 @@ NAMESPACE=hello-world-apps-and-services
 APPLICATION_NAME=hello-world-ui
 DEPLOYMENT=local-dev
 
-OTEL_LOGS_ENABLED=false
-OTEL_EXPORTER_ENDPOINT=http://host.docker.internal:4418
+UTILS_OTEL_LOGS_ENABLED=false
+UTILS_OTEL_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
 HTTP_CLIENT_LOGGING_LEVEL=DEBUG
 
 
-spring.application.org=${ENV_ORGANISATION:${ORGANISATION}}
-spring.application.namespace=${ENV_NAMESPACE:${NAMESPACE}}
-spring.application.name=${ENV_APPLICATION_NAME:${APPLICATION_NAME}}
-spring.application.deployment=${ENV_DEPLOYMENT:${DEPLOYMENT}}
+spring.application.org=${ENV_UTILS_ORGANISATION:${ORGANISATION}}
+spring.application.namespace=${ENV_UTILS_NAMESPACE:${NAMESPACE}}
+spring.application.name=${ENV_UTILS_APPLICATION_NAME:${APPLICATION_NAME}}
+spring.application.deployment=${ENV_UTILS_DEPLOYMENT:${DEPLOYMENT}}
+
+otel.sdk.disabled=true
 
 otel.service.name=${spring.application.name}
 otel.resource.attributes.org=${spring.application.org}
@@ -23,5 +25,5 @@ otel.propagators=tracecontext,baggage
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
 otel.logs.exporter=otlp
-otel.exporter.otlp.endpoint=${ENV_OTEL_EXPORTER_ENDPOINT:${OTEL_EXPORTER_ENDPOINT}}
-otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
+otel.exporter.otlp.endpoint=${ENV_UTILS_OTEL_EXPORTER_ENDPOINT:${UTILS_OTEL_EXPORTER_ENDPOINT}}
+otel.instrumentation.logback-appender.enabled=${ENV_UTILS_OTEL_LOGS_ENABLED:${UTILS_OTEL_LOGS_ENABLED}}
