--- a/05-spring-boot-security/e-secured-app-and-services/hello-world-modular/pom.xml
+++ b/05-spring-boot-security/e-secured-app-and-services/hello-world-modular/pom.xml
@@ -76,7 +76,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>			
 	</dependencies>
 
 </project>
